se agregan cambios de mail

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   							<div class="collapse navbar-collapse navbar-responsive-collapse">
   								<ul class="nav navbar-nav">
 	  								<li><a href="index.html">Inicio</a></li>
-									<li><a href="#">Quienes Somos</a></li>
-									<li><a href="#">Contactanos</a></li>
+									<li><a href="#ts-features">Evite su alza</a></li>
+									<li><a href="#ts-features">Contactanos</a></li>
 
   								</ul>
   							</div>
@@ -91,7 +91,7 @@
   						</div>
 
   						<div class="find-agent pull-right">
-  							<a href="#">Te ayudamos</a>
+  							<a href="#ts-features">Te ayudamos</a>
   						</div>
 
   					</div>
@@ -114,11 +114,7 @@
   					<div class="slider-content">
   						<div class="col-md-12 text-center">
   							<h2 class="slide-title animated4">Proteja Sus Derechos</h2>
-  							<h3 class="slide-sub-title animated5">¿Su isapre aumentó el precio base de su plan de salud?</h3>	
-  							<p class="animated6">
-  								<a href="#" class="slider btn btn-primary">Saber más</a>
-  								<a href="#" class="slider btn btn-primary border">Contáctenos</a>
-  							</p>	     
+  							<h3 class="slide-sub-title animated5">¿Su isapre aumentó el precio base de su plan de salud?</h3>     
   						</div>
   					</div>
   				</div><!--/ Carousel item fin -->
@@ -153,8 +149,8 @@ Desde que Usted recibe la Carta de Adecuación, tiene un plazo de 90 días para 
 							<p class="center"><strong>Proteja sus derechos ahora</strong></p>
 							<p>Si la Isapre desea aumentar unilateralmente el PRECIO BASE de su Plan de Salud, usted puede evitarlo, como ya miles de afiliados lo han hecho, manteniendo sin cambios el precio pactado. Se apela mediante un Recurso de Protección en la Corte de Apelaciones, que nuestros abogados gestionan a favor del afiliado, solicitando de esta manera conservar su plan de salud, cobertura médica y valor actual del plan.</p>
 							<p class="center"><strong>Evite este abuso hoy mismo</strong></p>
-							<p>Ingrese sus datos e información requerida en nuestro portal online ahora, ya que desde la fecha de la información recibida, sólo tiene 90 días para evitar el alza de su Precio Base del Plan de Salud.</p>
-							<p class="center"><strong>Nuestra asesoría es rápida, eficaz y sin costo para usted.</strong></p>
+							<br>
+							<p class="center"><strong>Ingrese sus datos en el formulario para tener una información rápida y eficaz</strong></p>
   						</div><!-- Intro fin -->
   					</div><!-- Col fin -->
 
@@ -171,24 +167,38 @@ Desde que Usted recibe la Carta de Adecuación, tiene un plazo de 90 días para 
   							<div class="row">
   								<div class="col-xs-12 col-md-12">
   									<div class="form-group">
-  										<input class="form-control" name="txtEmail" id="txtEmail" placeholder="Email" required>
+  										<input class="form-control" name="txtApellido" id="txtApellido" placeholder="Apellido" required>
   									</div>
   								</div>
   							</div>
   							<div class="row">
   								<div class="col-xs-12 col-md-12">
   									<div class="form-group">
-  										<input class="form-control" name="txtAsunto" id="txtAsunto" type="text" placeholder="Asunto" required />
+  										<input class="form-control" name="txtRut" id="txtRut" type="text" placeholder="Rut" required />
   									</div>
   								</div>
   							</div>
   							<div class="row">
   								<div class="col-xs-12 col-md-12">
   									<div class="form-group">
-  										<textarea class="form-control" placeholder="Mensaje" rows="6" name="txtComentario" required></textarea>
+  										<input class="form-control" name="txtDireccion" id="txtDireccion" type="text" placeholder="Dirección (Impresa en la carta)" required />
   									</div>
   								</div>
   							</div>
+                <div class="row">
+                  <div class="col-xs-12 col-md-12">
+                    <div class="form-group">
+                      <input class="form-control" name="txtTelefono" id="txtTelefono" type="text" placeholder="Teléfono" required />
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-12 col-md-12">
+                    <div class="form-group">
+                      <input class="form-control" name="txtEmail" id="txtEmail" type="text" placeholder="Email" required />
+                    </div>
+                  </div>
+                </div>
 
   							<div class="form-group">
   								<input class="button btn btn-primary" type="button" value="Enviar">
