se elimina el mapa innecesario y se intenta arreglar el owl carousel para video, aunque no queda funcionando

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Desde que Usted recibe la Carta de Adecuación, tiene un plazo de 90 días para 
   			<div class="container">
   				<div class="row text-center">
   					<h2 class="title">
-  						Gana Salud en la TV
+  						Gana Salud en TV
   						<span class="title-head">Testimonios</span>
   					</h2>
   				</div>
@@ -222,51 +222,51 @@ Desde que Usted recibe la Carta de Adecuación, tiene un plazo de 90 días para 
   				<div class="row">
   					<div class="col-md-12">
   						<div id="product-slide" class="owl-carousel owl-theme product-slide">
-  							<div class="item">
+  							<div class="item-video">
   								<div class="product-item">
-  									<img class="img-responsive" src="images/insurance/life-insurance.jpg" alt="">
+  									<a class="owl-video" href="https://www.youtube.com/watch?v=Y8jcKcbAZ9s"></a>
   								</div>
   							</div>
 
   							<div class="item">
   								<div class="product-item">
-  									<img class="img-responsive" src="images/insurance/life-insurance.jpg" alt="">
+  									<a class="owl-video" href="https://www.youtube.com/watch?v=Y8jcKcbAZ9s"></a>
   								</div>
   							</div>
 
   							<div class="item">
   								<div class="product-item">
-  									<img class="img-responsive" src="images/insurance/life-insurance.jpg" alt="">
+  									<a class="owl-video" href="https://www.youtube.com/watch?v=Y8jcKcbAZ9s"></a>
   								</div>
   							</div>
 
   							<div class="item">
   								<div class="product-item">
-  									<img class="img-responsive" src="images/insurance/life-insurance.jpg" alt="">
+  									<a class="owl-video" href="https://www.youtube.com/watch?v=Y8jcKcbAZ9s"></a>
   								</div>
   							</div>
 
   							<div class="item">
   								<div class="product-item">
-  									<img class="img-responsive" src="images/insurance/life-insurance.jpg" alt="">
+  									<a class="owl-video" href="https://www.youtube.com/watch?v=Y8jcKcbAZ9s"></a>
   								</div>
   							</div>
 
   							<div class="item">
   								<div class="product-item">
-  									<img class="img-responsive" src="images/insurance/life-insurance.jpg" alt="">
+  									<a class="owl-video" href="https://www.youtube.com/watch?v=Y8jcKcbAZ9s"></a>
   								</div>
   							</div>
 
   							<div class="item">
   								<div class="product-item">
-  									<img class="img-responsive" src="images/insurance/life-insurance.jpg" alt="">
+  									<a class="owl-video" href="https://www.youtube.com/watch?v=Y8jcKcbAZ9s"></a>
   								</div>
   							</div>
 
   							<div class="item">
   								<div class="product-item">
-  									<img class="img-responsive" src="images/insurance/life-insurance.jpg" alt="">
+  									<a class="owl-video" href="https://www.youtube.com/watch?v=Y8jcKcbAZ9s"></a>
   								</div>
   							</div>  							
 
